Inclusão completa do RESTRICT TERMS com DELETE, POST

--- a/MinutoSeguros.API/MinutoSeguros.API.csproj
+++ b/MinutoSeguros.API/MinutoSeguros.API.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\MinutoSeguros.DAO\MinutoSeguros.DAO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
